<resources>
    <string name="app_name">Android PS3 Manager</string>
    <string name="title_system">System</string>
    <string name="title_memory">Memory</string>
    <string name="title_ids">Console IDs</string>
    <string name="title_misc">Misc.</string>
    <string name="ps3_system_settings">PS3 Main System Settings</string>
    <string name="console_ip">Console IP Address</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="attach">Attach</string>
    <string name="execute">Execute</string>
    <string name="shutdown">Shut Down</string>
    <string name="reboot">Reboot</string>
    <string name="ps3mapi_connection">PS3MAPI Connection</string>
    <string name="system_power_options">System Power Options</string>
    <string name="connecting">Connecting…</string>
    <string name="connection_failed">Connection failed</string>
    <string name="attaching">Attaching…</string>
    <string name="attaching_failed">Failed to attach</string>
    <string name="connected">Connected to PS3</string>
    <string name="attached">Attached to game successfully</string>
    <string name="invalid_ip">Invalid IP Address</string>
    <string name="shutdown_fail">Failed to shut down PS3</string>
    <string name="reboot_fail">Failed to reboot PS3</string>
    <string name="process_memory_title">Process Memory Management</string>
    <string name="attached_eboot_id">EBOOT Process ID:</string>
    <string name="not_attached">N/A (Not Attached)</string>
    <string name="get_memory">Get Memory</string>
    <string name="read">Read</string>
    <string name="address_hint">Memory Address</string>
    <string name="length_bytes_hint">Length (Bytes)</string>
    <string name="address_value">Address Value</string>
    <string name="set_memory">Set Memory</string>
    <string name="write">Write</string>
    <string name="message_about">Version 1.0.0\nDeveloped by Jaideep Prasad</string>
    <string name="read_mem_fail">Failed to read from PS3 memory</string>
    <string name="write_mem_fail">Failed to write to PS3 memory</string>
    <string name="write_mem_success">Memory write successful</string>
    <string name="console_ids_title">PS3 Console IDs</string>
    <string name="idps">IDPS</string>
    <string name="psid">PSID</string>
    <string name="new_id">New ID (32 Characters)</string>
    <string name="set_ids">Set IDPS and PSID</string>
    <string name="invalid_ids">Invalid IDs</string>
    <string name="failed_set_ids">Failed to set IDs</string>
    <string name="success_id_set">Successfully set IDPS and PSID</string>
    <string name="misc_features">Miscellaneous Features</string>
    <string name="message_notification">Message Notification</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="buzzer_control">Ring PS3 Buzzer</string>
    <string name="single">Single</string>
    <string name="double_twice">Double</string>
    <string name="triple">Triple</string>
    <string name="light_settings">PS3 LED Settings</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="blink_fast">Blink Fast</string>
    <string name="blink_slow">Blink Slow</string>
    <string name="notify_fail">Failed to notify PS3</string>
    <string name="buzzer_fail">Failed to ring PS3 buzzer</string>
    <string name="lights_fail">Failed to set PS3 LEDs</string>
    <string name="about">About</string>
</resources>