<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.identification.IdentificationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/idTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/console_ids_title"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idpsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/idTitle"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/idps"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/idpsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/idpsLabel"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:maxLength="32"
                android:gravity="center"
                android:hint="@string/new_id"
                android:inputType="text"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/psidLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/idpsText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/psid"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/psidText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/psidLabel"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/new_id"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="32" />

            <Button
                android:id="@+id/setIdButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/psidText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/set_ids" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>